new paths; potentially useful memory / GC JVM options